ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: p99-opis-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - p99-opis.diamond.ac.uk
  rules:
    - host: p99-opis.diamond.ac.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epics-opis
                port:
                  number: 80
